<resources>
    <string name="app_name">코인체크</string>

    <string name="tab_ticker_list_all">전체</string>
    <string name="tab_ticker_list_favorite">즐겨찾기</string>

    <string name="sort_coin_price">가격</string>
    <string name="sort_coin_name">이름</string>
    <string name="sort_coin_rate">변동률</string>
    <string name="sort_coin_volume">거래량</string>

    <string name="hint_search_ticker">코인명 검색</string>

    <string name="settings_app_theme">테마</string>
    <string name="settings_ticker_change_color">종목 가격 변화에 따른 색상 변경</string>
    <string name="settings_btn_select_ticker">btn_select_ticker</string>
    <string name="settings_select_ticker">코인 선택</string>
    <string name="settings_floating_window">플로팅 윈도우 설정</string>
    <string name="settings_title_floating_window">플로팅 윈도우</string>
    <string name="settings_title_ui">UI</string>

    <string name="key_pref_app_theme">KEY_APP_THEME</string>
    <string name="key_pref_ticker_change_color">KEY_TICKER_CHANGE_COLOR</string>
    <string name="key_pref_enable_floating_window">KEY_PREF_ENABLE_FLOATING_WINDOW</string>

    <string name="app_theme_system">시스템</string>
    <string name="app_theme_light">라이트</string>
    <string name="app_theme_dark">다크</string>

    <string name="list_category_krw">KRW</string>
    <string name="list_category_btc">BTC</string>
    <string name="list_category_usdt">USDT</string>
    <string name="list_category_favorite">관심</string>

    <string name="home_error_network">네트워크 오류가 발생했습니다.</string>
    <string name="home_error_unexpected">알 수 없는 오류가 발생했습니다.</string>
    <string name="retry">재시도</string>

    <string name="unit_million">백만</string>
    <string name="unit_won">원</string>

    <string name="ticker_detail_add_my_asset">자산 추가</string>
    <string name="ticker_detail_modify_my_asset">자산 수정</string>
    <string name="ticker_detail_price_compared_prev_day">전일대비</string>

    <string name="my_asset_hold_quantity">보유수량</string>
    <string name="my_asset_buy_price">매수금액</string>
    <string name="my_asset_profit_and_loss_percent">수익률</string>
    <string name="my_asset_profit_and_loss">평가손익</string>
    <string name="my_asset_total_value">총 보유자산</string>
    <string name="my_asset_total_buy">총 매수</string>
    <string name="my_asset_value">평가금액</string>
    <string name="my_asset_average_buy_price">매수평균가</string>
    <string name="ticker_detail_delete_my_asset">자산 삭제</string>
    <string name="my_asset_chart_center_text">보유 비중</string>

    <string name="guide_require_add_asset">홈 화면에서 코인을 선택하여 자산에 추가해주세요.</string>
    <string name="confirm">확인</string>
    <string name="key_pref_floating_window_transparent">KEY_PREF_FLOATING_WINDOW_TRANSPARENT</string>
    <string name="settings_floating_window_transparent">플로팅 윈도우 투명도</string>

    <string name="permission_overlay_dialog_button_positive">확인</string>
    <string name="permission_overlay_dialog_message">플로팅 윈도우 기능을 사용하기 위해 다른 앱 위에 그리기 권한이 필요합니다.</string>
    <string name="permission_overlay_dialog_title">권한 요청</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="settings_enable_floating_window">플로팅 윈도우 활성화</string>
</resources>