<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="activity"
            type="com.example.coinapp.ui.setting.floatingwindow.FloatingWindowSettingActivity" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_13sdp"
            tools:context=".ui.setting.floatingwindow.FloatingWindowSettingActivity">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/layout_section_floating_window"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background_setting_section"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/tv_enable_floating_window"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp"
                    android:gravity="center_vertical"
                    android:paddingStart="@dimen/_10sdp"
                    android:paddingEnd="@dimen/_10sdp"
                    android:text="@string/settings_enable_floating_window"
                    android:textColor="@color/color_text"
                    android:textSize="@dimen/_13sdp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/switch_enable_floating_window"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:onCheckedChanged="@{(view, isChecked) -> activity.settingSwitchClick(view.id, isChecked)}"
                    app:layout_constraintBottom_toBottomOf="@id/tv_enable_floating_window"
                    app:layout_constraintEnd_toEndOf="@id/layout_section_floating_window"
                    app:layout_constraintTop_toTopOf="@id/tv_enable_floating_window" />

                <TextView
                    android:id="@+id/tv_select_floating_ticker"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp"
                    android:background="?selectableItemBackground"
                    android:gravity="center_vertical"
                    android:onClick="@{(view) -> activity.settingMenuClick(view.id)}"
                    android:paddingStart="@dimen/_10sdp"
                    android:paddingEnd="@dimen/_10sdp"
                    android:text="@string/settings_select_ticker"
                    android:textColor="@color/color_text"
                    android:textSize="@dimen/_13sdp"
                    app:drawableRightCompat="@drawable/ic_arrow_forward"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/switch_enable_floating_window" />

                <TextView
                    android:id="@+id/tv_floating_window_transparent"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp"
                    android:gravity="center_vertical"
                    android:paddingStart="@dimen/_10sdp"
                    android:paddingEnd="@dimen/_10sdp"
                    android:text="@string/settings_floating_window_transparent"
                    android:textColor="@color/color_text"
                    android:textSize="@dimen/_13sdp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_select_floating_ticker" />

                <androidx.appcompat.widget.AppCompatSeekBar
                    android:id="@+id/seekbar_floating_window_transparent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:max="255"
                    android:onStopTrackingTouch="@{(view) -> activity.settingProgressChanged(view.id, view.progress)}"
                    android:paddingBottom="@dimen/_7sdp"
                    android:value="127"
                    app:layout_constraintTop_toBottomOf="@id/tv_floating_window_transparent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</layout>